fix: collapsed button

--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -22,10 +22,14 @@ aside {
   will-change: width; 
   margin-bottom: auto;
 
-  &.collasped {
+  &.collapsed {
     width: 1.3em;
     height: 1.2em;
+    position: fixed;
+    left: 0;
+    top: 0;
     border-radius: 0 0 3px 0;
+    z-index: 1;
   }
 }
 
